praxis/target/generated-sources/antlr4/com/compiladores/prueba/praxis/LexicoParser.java
// Generated from Lexico.g4 by ANTLR 4.4
package com.compiladores.prueba.praxis;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LexicoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, INPUT=2, OUTPUT=3, BEGIN=4, END=5, ENDP=6, VAR=7, REAL=8, INT=9, 
		IF=10, ELSE=11, THEN=12, WHILE=13, ASIGN=14, SUMA=15, RESTA=16, MULT=17, 
		DIV=18, MAQ=19, MEQ=20, MAI=21, MEI=22, FIN=23, NOT=24, DO=25, IGUAL=26, 
		PABIERTO=27, PCERRADO=28, LLABIERTO=29, LLACERRADO=30, SEMICOLON=31, COMA=32, 
		COLON=33, SABCERR=34, READ=35, WRITELN=36, ID=37, NUMERO=38, WS=39;
	public static final String[] tokenNames = {
		"<INVALID>", "'program'", "'input'", "'output'", "'begin'", "'end'", "'end.'", 
		"'var'", "'real'", "'integer'", "'if'", "'else'", "'then'", "'while'", 
		"':='", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'>='", "'<='", "'eof'", 
		"'not'", "'do'", "'='", "'('", "')'", "'{'", "'}'", "';'", "','", "':'", 
		"'''", "'read'", "'writeln'", "ID", "NUMERO", "WS"
	};
	public static final int
		RULE_program = 0, RULE_declaracion = 1, RULE_variable = 2, RULE_tipo = 3, 
		RULE_sentencia = 4, RULE_funcion = 5, RULE_leer = 6, RULE_escribir = 7, 
		RULE_mientras = 8, RULE_si = 9, RULE_encambio = 10, RULE_condicion = 11, 
		RULE_comparacion = 12, RULE_asignacion = 13, RULE_suma = 14, RULE_division = 15, 
		RULE_comentario = 16, RULE_string = 17;
	public static final String[] ruleNames = {
		"program", "declaracion", "variable", "tipo", "sentencia", "funcion", 
		"leer", "escribir", "mientras", "si", "encambio", "condicion", "comparacion", 
		"asignacion", "suma", "division", "comentario", "string"
	};

	@Override
	public String getGrammarFileName() { return "Lexico.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LexicoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public TerminalNode SEMICOLON() { return getToken(LexicoParser.SEMICOLON, 0); }
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public TerminalNode PCERRADO() { return getToken(LexicoParser.PCERRADO, 0); }
		public TerminalNode ENDP() { return getToken(LexicoParser.ENDP, 0); }
		public TerminalNode INPUT() { return getToken(LexicoParser.INPUT, 0); }
		public TerminalNode COMA() { return getToken(LexicoParser.COMA, 0); }
		public TerminalNode ID() { return getToken(LexicoParser.ID, 0); }
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public TerminalNode VAR() { return getToken(LexicoParser.VAR, 0); }
		public TerminalNode OUTPUT() { return getToken(LexicoParser.OUTPUT, 0); }
		public TerminalNode PABIERTO() { return getToken(LexicoParser.PABIERTO, 0); }
		public TerminalNode BEGIN() { return getToken(LexicoParser.BEGIN, 0); }
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public TerminalNode PROGRAM() { return getToken(LexicoParser.PROGRAM, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); match(PROGRAM);
			setState(37); match(ID);
			setState(38); match(PABIERTO);
			setState(39); match(INPUT);
			setState(40); match(COMA);
			setState(41); match(OUTPUT);
			setState(42); match(PCERRADO);
			setState(43); match(SEMICOLON);
			setState(44); match(VAR);
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA || _la==ID) {
				{
				{
				setState(45); declaracion();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51); match(BEGIN);
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << ELSE) | (1L << WHILE) | (1L << READ) | (1L << WRITELN) | (1L << ID))) != 0)) {
				{
				{
				setState(52); sentencia();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58); match(ENDP);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LLABIERTO) {
				{
				{
				setState(59); comentario();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(LexicoParser.SEMICOLON, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode COLON() { return getToken(LexicoParser.COLON, 0); }
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitDeclaracion(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(65); variable();
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COMA || _la==ID );
			setState(70); match(COLON);
			setState(71); tipo();
			setState(72); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LexicoParser.ID, 0); }
		public TerminalNode COMA() { return getToken(LexicoParser.COMA, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_la = _input.LA(1);
			if (_la==COMA) {
				{
				setState(74); match(COMA);
				}
			}

			setState(77); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public TerminalNode REAL() { return getToken(LexicoParser.REAL, 0); }
		public TerminalNode INT() { return getToken(LexicoParser.INT, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_la = _input.LA(1);
			if ( !(_la==REAL || _la==INT) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public SiContext si() {
			return getRuleContext(SiContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public EncambioContext encambio() {
			return getRuleContext(EncambioContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitSentencia(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sentencia);
		try {
			setState(86);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(81); asignacion();
				}
				break;
			case READ:
			case WRITELN:
				enterOuterAlt(_localctx, 2);
				{
				setState(82); funcion();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(83); mientras();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 4);
				{
				setState(84); si();
				}
				break;
			case ELSE:
				enterOuterAlt(_localctx, 5);
				{
				setState(85); encambio();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionContext extends ParserRuleContext {
		public EscribirContext escribir() {
			return getRuleContext(EscribirContext.class,0);
		}
		public LeerContext leer() {
			return getRuleContext(LeerContext.class,0);
		}
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitFuncion(this);
		}
	}

	public final FuncionContext funcion() throws RecognitionException {
		FuncionContext _localctx = new FuncionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcion);
		try {
			setState(90);
			switch (_input.LA(1)) {
			case READ:
				enterOuterAlt(_localctx, 1);
				{
				setState(88); leer();
				}
				break;
			case WRITELN:
				enterOuterAlt(_localctx, 2);
				{
				setState(89); escribir();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeerContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LexicoParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(LexicoParser.SEMICOLON, 0); }
		public TerminalNode PCERRADO() { return getToken(LexicoParser.PCERRADO, 0); }
		public TerminalNode PABIERTO() { return getToken(LexicoParser.PABIERTO, 0); }
		public TerminalNode READ() { return getToken(LexicoParser.READ, 0); }
		public LeerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterLeer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitLeer(this);
		}
	}

	public final LeerContext leer() throws RecognitionException {
		LeerContext _localctx = new LeerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_leer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(READ);
			setState(93); match(PABIERTO);
			setState(94); match(ID);
			setState(95); match(PCERRADO);
			setState(96); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EscribirContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(LexicoParser.ID); }
		public TerminalNode SEMICOLON() { return getToken(LexicoParser.SEMICOLON, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode PCERRADO() { return getToken(LexicoParser.PCERRADO, 0); }
		public TerminalNode COMA(int i) {
			return getToken(LexicoParser.COMA, i);
		}
		public TerminalNode PABIERTO() { return getToken(LexicoParser.PABIERTO, 0); }
		public TerminalNode ID(int i) {
			return getToken(LexicoParser.ID, i);
		}
		public TerminalNode WRITELN() { return getToken(LexicoParser.WRITELN, 0); }
		public List<TerminalNode> COMA() { return getTokens(LexicoParser.COMA); }
		public EscribirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escribir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterEscribir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitEscribir(this);
		}
	}

	public final EscribirContext escribir() throws RecognitionException {
		EscribirContext _localctx = new EscribirContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_escribir);
		int _la;
		try {
			setState(121);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98); match(WRITELN);
				setState(99); match(PABIERTO);
				setState(100); match(ID);
				setState(101); match(PCERRADO);
				setState(102); match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103); match(WRITELN);
				setState(104); match(PABIERTO);
				setState(106);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(105); match(ID);
					}
				}

				setState(109);
				_la = _input.LA(1);
				if (_la==COMA) {
					{
					setState(108); match(COMA);
					}
				}

				setState(111); string();
				setState(113);
				_la = _input.LA(1);
				if (_la==COMA) {
					{
					setState(112); match(COMA);
					}
				}

				setState(116);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(115); match(ID);
					}
				}

				setState(118); match(PCERRADO);
				setState(119); match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MientrasContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(LexicoParser.NOT, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public TerminalNode SEMICOLON() { return getToken(LexicoParser.SEMICOLON, 0); }
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public TerminalNode DO() { return getToken(LexicoParser.DO, 0); }
		public TerminalNode BEGIN() { return getToken(LexicoParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(LexicoParser.END, 0); }
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public TerminalNode WHILE() { return getToken(LexicoParser.WHILE, 0); }
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public TerminalNode FIN() { return getToken(LexicoParser.FIN, 0); }
		public MientrasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mientras; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterMientras(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitMientras(this);
		}
	}

	public final MientrasContext mientras() throws RecognitionException {
		MientrasContext _localctx = new MientrasContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mientras);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); match(WHILE);
			setState(125);
			_la = _input.LA(1);
			if (_la==NOT) {
				{
				setState(124); match(NOT);
				}
			}

			setState(127); match(FIN);
			setState(128); match(DO);
			setState(129); match(BEGIN);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << ELSE) | (1L << WHILE) | (1L << READ) | (1L << WRITELN) | (1L << ID))) != 0)) {
				{
				{
				setState(130); sentencia();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136); match(END);
			setState(137); match(SEMICOLON);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LLABIERTO) {
				{
				{
				setState(138); comentario();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SiContext extends ParserRuleContext {
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public TerminalNode IF() { return getToken(LexicoParser.IF, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode THEN() { return getToken(LexicoParser.THEN, 0); }
		public TerminalNode BEGIN() { return getToken(LexicoParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(LexicoParser.END, 0); }
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public SiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_si; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterSi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitSi(this);
		}
	}

	public final SiContext si() throws RecognitionException {
		SiContext _localctx = new SiContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_si);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); match(IF);
			setState(145); condicion();
			setState(146); match(THEN);
			setState(147); match(BEGIN);
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << ELSE) | (1L << WHILE) | (1L << READ) | (1L << WRITELN) | (1L << ID))) != 0)) {
				{
				{
				setState(148); sentencia();
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(154); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EncambioContext extends ParserRuleContext {
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(LexicoParser.ELSE, 0); }
		public TerminalNode SEMICOLON() { return getToken(LexicoParser.SEMICOLON, 0); }
		public EncambioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_encambio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterEncambio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitEncambio(this);
		}
	}

	public final EncambioContext encambio() throws RecognitionException {
		EncambioContext _localctx = new EncambioContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_encambio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156); match(ELSE);
			setState(157); funcion();
			setState(159);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(158); match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(LexicoParser.NOT, 0); }
		public List<TerminalNode> ID() { return getTokens(LexicoParser.ID); }
		public TerminalNode NUMERO() { return getToken(LexicoParser.NUMERO, 0); }
		public ComparacionContext comparacion() {
			return getRuleContext(ComparacionContext.class,0);
		}
		public TerminalNode ID(int i) {
			return getToken(LexicoParser.ID, i);
		}
		public CondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterCondicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitCondicion(this);
		}
	}

	public final CondicionContext condicion() throws RecognitionException {
		CondicionContext _localctx = new CondicionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_condicion);
		int _la;
		try {
			setState(175);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(161); match(ID);
				setState(163);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(162); match(NOT);
					}
				}

				setState(165); comparacion();
				setState(166); match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(168); match(ID);
				setState(170);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(169); match(NOT);
					}
				}

				setState(172); comparacion();
				setState(173); match(NUMERO);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparacionContext extends ParserRuleContext {
		public TerminalNode MEI() { return getToken(LexicoParser.MEI, 0); }
		public TerminalNode MEQ() { return getToken(LexicoParser.MEQ, 0); }
		public TerminalNode MAI() { return getToken(LexicoParser.MAI, 0); }
		public TerminalNode MAQ() { return getToken(LexicoParser.MAQ, 0); }
		public ComparacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterComparacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitComparacion(this);
		}
	}

	public final ComparacionContext comparacion() throws RecognitionException {
		ComparacionContext _localctx = new ComparacionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_comparacion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAQ) | (1L << MEQ) | (1L << MAI) | (1L << MEI))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LexicoParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(LexicoParser.SEMICOLON, 0); }
		public DivisionContext division() {
			return getRuleContext(DivisionContext.class,0);
		}
		public TerminalNode NUMERO() { return getToken(LexicoParser.NUMERO, 0); }
		public SumaContext suma() {
			return getRuleContext(SumaContext.class,0);
		}
		public TerminalNode ASIGN() { return getToken(LexicoParser.ASIGN, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LexicoListener ) ((LexicoListener)listener).exitAsignacion(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_asignacion);
		try {
			setState(185);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(179); match(ID);
				setState(180); match(ASIGN);
				setState(181); match(NUMERO);
				setState(182); match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(183); suma();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(184); division();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
